data/derived/comb/progs/unify/prog4273.ml.out
Characters 568-572:
  res^"/(abs("^res^")+"1")"
                   ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
